test/files/pos/t3120/J1.java
class J1 {
    public class Inner1 { }
    public static class Inner2 { }
}
