test/files/neg/t0673/JavaClass.java
public class JavaClass {
    public static class InnerClass {}
}
